<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="vertical"
      android:padding="@dimen/spacing_normal"
      >

    <android.support.design.widget.TextInputLayout
        style="@style/Widget.InputLayout"
        >

      <android.support.design.widget.TextInputEditText
          android:id="@+id/xxxhdpi"
          style="@style/Widget.InputEdit"
          android:hint="@string/hint_xxxhdpi"
          />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        style="@style/Widget.InputLayout"
        >

      <android.support.design.widget.TextInputEditText
          android:id="@+id/xxhdpi"
          style="@style/Widget.InputEdit"
          android:hint="@string/hint_xxhdpi"
          />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        style="@style/Widget.InputLayout"
        >

      <android.support.design.widget.TextInputEditText
          android:id="@+id/xhdpi"
          style="@style/Widget.InputEdit"
          android:hint="@string/hint_xhdpi"
          />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        style="@style/Widget.InputLayout"
        >

      <android.support.design.widget.TextInputEditText
          android:id="@+id/hdpi"
          style="@style/Widget.InputEdit"
          android:hint="@string/hint_hdpi"
          />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        style="@style/Widget.InputLayout"
        >

      <android.support.design.widget.TextInputEditText
          android:id="@+id/mdpi"
          style="@style/Widget.InputEdit"
          android:hint="@string/hint_mdpi"
          />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        style="@style/Widget.InputLayout"
        >

      <android.support.design.widget.TextInputEditText
          android:id="@+id/ldpi"
          style="@style/Widget.InputEdit"
          android:hint="@string/hint_ldpi"
          />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        style="@style/Widget.InputLayout"
        >

      <android.support.design.widget.TextInputEditText
          android:id="@+id/tvdpi"
          style="@style/Widget.InputEdit"
          android:hint="@string/hint_tvdpi"
          />
    </android.support.design.widget.TextInputLayout>

  </LinearLayout>
</ScrollView>
